098_bst_map/grade.txt
Grading at 11/17/2021:17:38:01.799302
For commit ID 7b27293c0031c675140d18c55ca35ee01b5896c6
Grading at Wed Nov 17 12:38:00 EST 2021
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:167:14: error: assignment of member ‘BstMap<int, int>::root’ in read-only object
     rhs.root = tempRoot;
     ~~~~~~~~~^~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:167:14: error: assignment of member ‘BstMap<int, std::__cxx11::basic_string<char> >::root’ in read-only object
     rhs.root = tempRoot;
     ~~~~~~~~~^~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:167:14: error: assignment of member ‘BstMap<int, Tester>::root’ in read-only object
     rhs.root = tempRoot;
     ~~~~~~~~~^~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:167:14: error: assignment of member ‘BstMap<std::__cxx11::basic_string<char>, int>::root’ in read-only object
     rhs.root = tempRoot;
     ~~~~~~~~~^~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:167:14: error: assignment of member ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::root’ in read-only object
     rhs.root = tempRoot;
     ~~~~~~~~~^~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:167:14: error: assignment of member ‘BstMap<std::__cxx11::basic_string<char>, Tester>::root’ in read-only object
     rhs.root = tempRoot;
     ~~~~~~~~~^~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:167:14: error: assignment of member ‘BstMap<Tester, int>::root’ in read-only object
     rhs.root = tempRoot;
     ~~~~~~~~~^~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:167:14: error: assignment of member ‘BstMap<Tester, std::__cxx11::basic_string<char> >::root’ in read-only object
     rhs.root = tempRoot;
     ~~~~~~~~~^~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:167:14: error: assignment of member ‘BstMap<Tester, Tester>::root’ in read-only object
     rhs.root = tempRoot;
     ~~~~~~~~~^~~~~~~~~~
The code did not compile.  This test failed.

Overall Grade: F
